<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dimsum</string>
    <string name="notification_dimming_complete">Just reached the dimming minimum, yay! time to crank up the brightness and enjoy life</string>
    <string name="notification_dimming_complete_title">Dimming complete</string>
    <string name="notification_brightening_complete_title">Brightening complete</string>
    <string name="notification_brightening_complete">Just reached the brightness max, time to take it easy and dim things down</string>
    <string name="main_save_current_brightness">Save current brightness</string>
    <string name="notification_action_disable">Disable</string>
    <string name="notification_action_reset">Reset</string>
    <string name="action_settings">Settings</string>
    <string name="settings_section_about">About</string>
    <string name="settings_about_feedback">Send feedback</string>
    <string name="settings_about_feedback_email_subject">%1$s Dimsum feedback %2$s</string>
    <string name="settings_about_version">Version %1$s</string>
    <string name="settings_feedback_email_chooser">Choose email app</string>
    <string name="settings_enabled">Enabled</string>
    <string name="settings_enabled_on">Background bightness change enabled</string>
    <string name="settings_enabled_off">Background bightness change disabled</string>
    <string name="settings_mode">Dimming mode</string>
    <string name="settings_mode_on">Dimming mode - screen will get dimmer</string>
    <string name="settings_mode_off">Brightness mode - screen will get brighter</string>
    <string name="settings_mode_default">true</string>
    <string name="settings_freq_default">1</string>
    <string name="settings_freq">Frequency of brightness change</string>
    <string name="settings_step">Brightness change step</string>
    <string name="settings_step_desc">Percentage change each step</string>
    <string name="settings_section_details">Config</string>
    <string name="settings_threashold_desc">When to end the brightness changing</string>
    <string name="settings_threashold">Threshold</string>

    <string-array name="freqs_labels">
        <item>Hourly</item>
        <item>4 hourly</item>
        <item>8 hourly</item>
        <item>12 hourly</item>
        <item>Once a day</item>
        <item>Once every 2 days</item>
    </string-array>
    <string-array name="freqs">
        <item>1</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>

</resources>